--- a/study/0618/style.css
+++ b/study/0618/style.css
@@ -36,24 +36,24 @@ body {
 
 .facialdesign1 {
     width: 20px;
-    height: 40px;
+    height: 30px;
     background-color: white;
-    border-radius: 20%;
+    border-radius: 30% 30% 20% 20%;
     position: absolute;
     z-index: 2;
-    top: -5px;
+    top: -1px;
     left: 70px;
 
 }
 
  .facialdesign2 {
     width: 20px;
-    height: 40px;
+    height: 30px;
     background-color: white;
-    border-radius: 20%;
+    border-radius: 30% 30% 20% 20%;
     position: absolute;
     z-index: 2;
-    top: -5px;
+    top: -3px;
     left: 100px;
 
 }
